[squash] nibsc-standards correction

--- a/sass/custom/nibsc-standards-2023-01.scss
+++ b/sass/custom/nibsc-standards-2023-01.scss
@@ -38,7 +38,7 @@ $logo-image-height: 2em;
   }
 
   .govuk-header__service-name {
-    color: $custom-text-colour;
+    display: none;
   }
 
   .govuk-header__container {
