--- a/sass/custom/nibsc-standards.scss
+++ b/sass/custom/nibsc-standards.scss
@@ -37,7 +37,7 @@ $logo-image-height: 2em;
   }
 
   .govuk-header__service-name {
-    color: $custom-text-colour;
+    display: none;
   }
 
   .govuk-header__container {
